--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -19,7 +19,7 @@
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
         android:focusable="true"
-        android:onClick="@{() -> actions.selectUser(user.id)}"
+        android:onClick="@{() -> actions.selectUser(user.id, user.username)}"
         android:orientation="vertical"
         android:padding="4dp">
 
