--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -12,7 +12,11 @@
         tools:layout="@layout/fragment_users">
         <action
             android:id="@+id/action_users_to_albums"
-            app:destination="@id/albumsFragment" />
+            app:destination="@id/albumsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/albumsFragment"
@@ -21,10 +25,18 @@
         tools:layout="@layout/fragment_albums">
         <action
             android:id="@+id/action_albums_to_photos"
-            app:destination="@id/photosFragment" />
+            app:destination="@id/photosFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
         <argument
             android:name="userId"
             app:argType="long" />
+        <argument
+            android:name="author"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/photosFragment"
@@ -33,11 +45,30 @@
         tools:layout="@layout/fragment_photos">
         <action
             android:id="@+id/action_photos_to_photodetails"
-            app:destination="@id/photoDetailsFragment" />
+            app:destination="@id/photoDetailsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <argument
+            android:name="albumId"
+            app:argType="long" />
+        <argument
+            android:name="author"
+            app:argType="string"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/photoDetailsFragment"
         android:name="si.development.ahill.beeniusdemo.presentation.photodetails.PhotoDetailsFragment"
         android:label="fragment_photo_details"
-        tools:layout="@layout/fragment_photo_details" />
+        tools:layout="@layout/fragment_photo_details">
+        <argument
+            android:name="photoId"
+            app:argType="long" />
+        <argument
+            android:name="photoTitle"
+            app:argType="string"
+            app:nullable="true" />
+    </fragment>
 </navigation>
