--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#222222</color>
+    <color name="beeniusShade">#222222</color>
+    <color name="beeniusRed">#FE3636</color>
+
+    <color name="colorPrimary">@color/beeniusShade</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FE3636</color>
+    <color name="colorAccent">@color/beeniusRed</color>
     <color name="colorBackground">#EFEFEF</color>
+
+    <color name="ic_launcher_background">@color/beeniusRed</color>
 </resources>
