--- a/app/src/main/res/layout/view_photo_details_bottom_sheet.xml
+++ b/app/src/main/res/layout/view_photo_details_bottom_sheet.xml
@@ -40,7 +40,7 @@
             android:id="@+id/textPhotoTitleLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Photo:"
+            android:text="@string/photo_details_bottom_sheet_photo_label"
             app:layout_constraintBottom_toBottomOf="@+id/textPhotoTitle"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +63,7 @@
             android:id="@+id/textAlbumTitleLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Album:"
+            android:text="@string/photo_details_bottom_sheet_album_label"
             app:layout_constraintBottom_toBottomOf="@+id/textAlbumTitle"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,7 +86,7 @@
             android:id="@+id/textAuthorLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Author:"
+            android:text="@string/photo_details_bottom_sheet_author_label"
             app:layout_constraintBottom_toBottomOf="@+id/textAuthor"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintStart_toStartOf="parent"
