--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -14,15 +14,32 @@
             type="si.development.ahill.beeniusdemo.domain.models.Photo" />
     </data>
 
-    <ImageView
-        android:id="@+id/imageThumbnail"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:clickable="true"
-        android:contentDescription="@string/photo_content_description_thumbnail"
-        android:focusable="true"
-        android:onClick="@{() -> actions.selectPhoto(photo.id, photo.title)}"
-        app:photoThumbnail="@{photo.thumbnailUrl}"
-        tools:background="@color/colorPrimary" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/imageThumbnail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:clickable="true"
+            android:contentDescription="@string/photo_content_description_thumbnail"
+            android:focusable="true"
+            android:onClick="@{() -> actions.selectPhoto(photo.id, photo.title)}"
+            app:photoThumbnail="@{photo.thumbnailUrl}"
+            tools:background="@color/colorPrimary" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="2dp"
+            android:alpha="0.9"
+            android:background="@color/beeniusShade"
+            android:padding="2dp"
+            android:text="@{photo.title}"
+            android:textAlignment="center"
+            android:textColor="@color/white" />
+    </FrameLayout>
 </layout>
